bonus/confs/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - web.192.168.56.110.nip.io
    secretName: iot-cert
  rules:
  - host: web.192.168.56.110.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-svc
            port:
              number: 80
